# torch_quantization

./: .gitignore  README.md  main.py  pyproject.toml
flake8/: .flake8
models/: data.py  eval.py  model_stats.py  train.py  vgg.py
qtorch/layers/: __init__.py  qconv.py  qlinear.py  qpool.py
qtorch/quantization/: __init__.py  bias.py  calibrate.py  float_to_fixed_point.py  fuse_bn.py  linear_quantize.py  quantize.py  weight_quantization.py
